fixed alignment collapse menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ header .container-fluid .row .col {
 
 #navbarNavDropdown {
     background-color:#6b7a8f;
-    padding-left:20px;
+    padding-left:0px;
     margin-top:8px;r
     width:100%;
 }
